--- a/MusicPlayer/Spotify/Pages/_Layout.cshtml
+++ b/MusicPlayer/Spotify/Pages/_Layout.cshtml
@@ -26,6 +26,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <script src="https://kit.fontawesome.com/686c553798.js" crossorigin="anonymous"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
