--- a/MusicPlayer/Spotify/_Imports.razor
+++ b/MusicPlayer/Spotify/_Imports.razor
@@ -7,4 +7,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Shared
+
 @using Spotify
+@using Spotify.Data
+@using Spotify.Data.Models
+@using Spotify.Pages
+@using Spotify.Pages.Items
