--- a/MusicPlayer/Spotify/Pages/Items/TrackCard.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackCard.razor
@@ -1,18 +1,18 @@
 ﻿<div class="card">
     <div class="card-area">
         <div class="card-image-area">
-            <div>
-                <img class="image" src="@Track.Image" />
+            <div class="image">
+                <img src="@Track.Image" />
                 <div class="play-button">
                     <i class="fa-solid fa-play"></i>
                 </div>
             </div>
         </div>
-        <div class="card-title-area">
-            <p>@Track.Title</p>
+        <div style="min-width: 0">
+            <p class="card-title-area">@Track.Title</p>
         </div>
-        <div class="card-author-area">
-            <p>@Track.Author</p>
+        <div style="min-width: 0">
+            <p class="card-author-area">@Track.Author</p>
         </div>
     </div>
 </div>
