models folder moved to root

--- a/MusicPlayer/Spotify/_Imports.razor
+++ b/MusicPlayer/Spotify/_Imports.razor
@@ -10,6 +10,6 @@
 
 @using Spotify
 @using Spotify.Data
-@using Spotify.Data.Models
+@using Spotify.Models
 @using Spotify.Pages
 @using Spotify.Pages.Items
