--- a/MusicPlayer/Spotify/Pages/_Layout.cshtml
+++ b/MusicPlayer/Spotify/Pages/_Layout.cshtml
@@ -28,5 +28,6 @@
 
     <script src="https://kit.fontawesome.com/686c553798.js" crossorigin="anonymous"></script>
     <script src="_framework/blazor.server.js"></script>
+    <script src="https://unpkg.com/@@phosphor-icons/web"></script>
 </body>
 </html>
