main layout added

--- a/MusicPlayer/Spotify/Pages/Index.razor
+++ b/MusicPlayer/Spotify/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Index</PageTitle>
 
-<div>
+@*<div>
      @if (Playlists is not null)
     {
         @foreach (var pl in Playlists)
@@ -10,7 +10,7 @@
             <SidePlaylist Playlist="pl"></SidePlaylist>
         }
     }
-</div>
+</div>*@
 
 <div class="tracks-area">
     @if (Tracks is not null)
