text elipsis added to trackCard

--- a/MusicPlayer/Spotify/Pages/Items/TrackCard.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/TrackCard.razor.css
@@ -58,6 +58,9 @@ p {
     padding-top: 0;
     padding-bottom: 0;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .card-title-area {
