--- a/MusicPlayer/Spotify/Shared/MainLayout.razor
+++ b/MusicPlayer/Spotify/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 
     <div class="sidebar-area">
         <div class="menu-area">
-
+            <Menu></Menu>
         </div>
 
         <div class="favorites-area">
