--- a/MusicPlayer/Spotify/Pages/Items/TrackCard.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/TrackCard.razor.css
@@ -3,6 +3,8 @@
     margin: 15px;
     max-width: 250px;
     max-height: 350px;
+    min-width: 150px;
+    flex: 1 1 200px;
     background: #151515;
     border-radius: 10px;
     transition: 0.3s;
