--- a/MusicPlayer/Spotify/Shared/MainLayout.razor.css
+++ b/MusicPlayer/Spotify/Shared/MainLayout.razor.css
@@ -17,6 +17,18 @@
     background: #121212;
 }
 
+.favorites-area, .main-area {
+    transition: --var1 0.5s;
+    transition-delay: 1s;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+    .favorites-area:hover, .main-area:hover {
+        --var1: #4f4f4f;
+        transition-delay: 0s;
+    }
+
 .sidebar-area {
     display: flex;
     flex-flow: column;
@@ -38,18 +50,24 @@
 .main-area {
     flex: 1;
     padding: 15px;
-    overflow-y: scroll;
 }
 
-    .main-area::-webkit-scrollbar {
-        width: 10px;
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background: var(--var1);
+}
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #898889;
+        transition: 0.5s;
     }
 
-    .main-area::-webkit-scrollbar-track:hover {
-        background: #151515;
-    }
-
-    .main-area::-webkit-scrollbar-thumb {
-        background: #008080;
-        border-radius: 3px;
-    }
+@property --var1 {
+    syntax: "<color>";
+    inherits: true;
+    initial-value: transparent;
+}
