--- a/MusicPlayer/Spotify/Shared/MainLayout.razor.css
+++ b/MusicPlayer/Spotify/Shared/MainLayout.razor.css
@@ -1,9 +1,23 @@
 ﻿.page {
+    height: 100vh;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+}
+
+.page-area {
     background: #000000;
     display: flex;
     padding: 10px;
-    height: 100vh;
+    /*height: 100%;*/
+    flex: 1;
+    overflow: hidden;
     box-sizing: border-box;
+}
+
+.trackbar-area {
+    height: 72px;
+    background: #000000;
 }
 
 .resizer {
@@ -71,3 +85,4 @@
     inherits: true;
     initial-value: transparent;
 }
+
