--- a/MusicPlayer/Spotify/Shared/MainLayout.razor
+++ b/MusicPlayer/Spotify/Shared/MainLayout.razor
@@ -37,6 +37,7 @@
         </div>
 
         <div class="trackbar-area">
+            <Trackbar></Trackbar>
         </div>
     </div>
 </CascadingValue>
