a lot of govnocode for window resizing detection added

--- a/MusicPlayer/Spotify/Shared/Trackbar.razor
+++ b/MusicPlayer/Spotify/Shared/Trackbar.razor
@@ -10,7 +10,7 @@
             <div class="track-title">
                 <div @ref=Title class="track-title-area">
                     @*<a href="#">Very Very Very Very Very Very Very Very Very V... Long tetle</a>*@
-                    <a href="#">Very Very Very Very Very Very Very Very Very Very Very Long Title</a>
+                    <a href="#">Very Very Very Very Very Very Very Long Title</a>
                 </div>
             </div>
             <div class="track-author">
