--- a/MusicPlayer/Spotify/Shared/Trackbar.razor.css
+++ b/MusicPlayer/Spotify/Shared/Trackbar.razor.css
@@ -10,6 +10,8 @@ a {
 .trackbar {
     display: flex;
     height: 100%;
+    padding-bottom: 8px;
+    box-sizing: border-box;
 }
 
     .trackbar .track-area, .trackbar .other-area {
@@ -21,6 +23,7 @@ a {
         width: 40%;
         background-color: wheat;
         display: flex;
+        flex-direction: column;
     }
 
     .trackbar .track-area {
@@ -39,6 +42,10 @@ a {
 
     .track-area .track-image img {
         border-radius: 10px;
+        min-width: 56px;
+        min-height: 56px;
+        max-width: 56px;
+        max-height: 56px;
     }
 
 .track-area .track-info {
@@ -124,3 +131,56 @@ a {
         /*right: 100%;*/
     }
 }
+
+.controls-area .buttons-area {
+    height: 40px;
+    width: 100%;
+}
+
+.controls-area .slider-area {
+    display: flex;
+    width: 100%;
+    justify-content:space-between;
+}
+
+.slider-area .slider-container {
+    width: 100%;
+    /*flex-basis: 80%;*/
+}
+
+.slider-area .play-time {
+    min-width: 40px;
+    /*flex-basis: 10%;*/
+}
+
+.slider-area .end-time {
+    min-width: 40px;
+    /*flex-basis: 10%;*/
+}
+
+
+    .slider-area .slider-container .slider {
+        appearance: none;
+        background-image: url("data:image/svg+xml,<svg xmlns='http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' width='100%' height='10'><defs><linearGradient id='blue-grad'><stop stop-color='%231e9ed7' offset='0%'/><stop stop-color='white' offset='100%'/></linearGradient></defs><rect x='0' y='0' width='50%' height='10' rx='5' fill='url(%23blue-grad)'/></svg>"), url("data:image/svg+xml,<svg xmlns='http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' width='100%' height='10'><rect x='0' y='0' width='100%' height='10' rx='5' fill='lightgray'/></svg>");
+        border-radius: 8px;
+        height: 10px;
+        outline: none;
+        width: 100%;
+    }
+
+        .slider-area .slider-container .slider::-webkit-slider-thumb {
+            appearance: none;
+            height: 10px;
+            width: 0px;
+            border-radius: 5px;
+            background: transparent;
+        }
+
+        .slider-area .slider-container .slider::-moz-range-thumb {
+            appearance: none;
+            height: 10px;
+            width: 0px;
+            border-radius: 5px;
+            background: transparent;
+            border: none;
+        }
