--- a/MusicPlayer/Spotify/Shared/MainLayout.razor
+++ b/MusicPlayer/Spotify/Shared/MainLayout.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>Main Title</PageTitle>
 
-<CascadingValue Value="this">
+<CascadingValue Value="@Playlists">
     <div class="page">
 
         <div @ref=Sidebar class="sidebar-area">
