track added to resources

--- a/MusicPlayer/Spotify/Pages/Items/SidePlaylist.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/SidePlaylist.razor.css
@@ -51,7 +51,7 @@
         color: #1e9ed7;
         margin-right: 5px;
         align-self: center;
-        /*visibility: hidden;*/
+        /*display: none;*/
     }
 
 .title-area .title {
