trackbar added to layout

--- a/MusicPlayer/Spotify/Shared/MainLayout.razor
+++ b/MusicPlayer/Spotify/Shared/MainLayout.razor
@@ -37,7 +37,10 @@
         </div>
 
         <div class="trackbar-area">
-            <Trackbar></Trackbar>
+            @if (Tracks is not null)
+            {
+                <Trackbar Track="@Tracks[0]"></Trackbar>
+            }
         </div>
     </div>
 </CascadingValue>
