--- a/MusicPlayer/Spotify/Shared/MainLayout.razor.css
+++ b/MusicPlayer/Spotify/Shared/MainLayout.razor.css
@@ -17,6 +17,9 @@
 
 .trackbar-area {
     height: 72px;
+    padding-bottom: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
     background: #000000;
 }
 
