--- a/MusicPlayer/Spotify/Shared/Trackbar.razor.css
+++ b/MusicPlayer/Spotify/Shared/Trackbar.razor.css
@@ -1,5 +1,6 @@
 ﻿:root {
     --track-info-width: 0;
+    --slider-played-width: 0;
 }
 
 a {
@@ -10,8 +11,7 @@ a {
 .trackbar {
     display: flex;
     height: 100%;
-    padding-bottom: 8px;
-    box-sizing: border-box;
+    align-items: center;
 }
 
     .trackbar .track-area, .trackbar .other-area {
@@ -21,15 +21,25 @@ a {
 
     .trackbar .controls-area {
         width: 40%;
-        background-color: wheat;
+        height: max-content;
+        min-width: 300px;
+        background-color: black;
         display: flex;
         flex-direction: column;
     }
 
     .trackbar .track-area {
-        min-width: 250px;
-        padding-left: 16px;
+        min-width: 180px;
+        padding-left: 8px;
     }
+
+.button {
+    border: none;
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
 
 .track-area .track-image {
     width: 56px;
@@ -103,13 +113,8 @@ a {
 }
 
     .track-area .track-heart .heart-button {
-        border: none;
-        color: #1e9ed7;
         font-size: 18px;
-        background-color: transparent;
-        width: 100%;
-        height: 100%;
-        cursor: pointer;
+        color: #1e9ed7;
     }
 
 .running-text {
@@ -133,54 +138,100 @@ a {
 }
 
 .controls-area .buttons-area {
-    height: 40px;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    color: #1e9ed7;
+    margin-bottom: 8px;
+}
+
+    .controls-area .buttons-area .button {
+        color: #9e9d9e;
+        font-size: 20px;
+        width: 32px;
+        height: 32px;
+        min-width: 32px;
+        min-height: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: default;
+    }
+
+        .controls-area .buttons-area .button:hover {
+            color: #fff;
+        }
+
+    .controls-area .buttons-area .playpause-button {
+        color: #fff;
+        font-size: 32px;
+    }
+
+    .controls-area .buttons-area .playpause-button:hover {
+        transform: scale(1.05)
+    }
+
+.buttons-area .buttons-left-area, .buttons-area .buttons-right-area {
+    display: flex;
+    gap: 8px;
 }
 
 .controls-area .slider-area {
     display: flex;
     width: 100%;
-    justify-content:space-between;
+    height: max-content;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
 }
 
 .slider-area .slider-container {
     width: 100%;
+    height: 20px;
     /*flex-basis: 80%;*/
 }
 
-.slider-area .play-time {
+.slider-area .current-time, .slider-area .duration-time {
     min-width: 40px;
-    /*flex-basis: 10%;*/
+    color: #a7a7a7;
+    font-size: 13px;
+    height: 20px;
+    line-height: 20px;
+    font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
 }
 
-.slider-area .end-time {
-    min-width: 40px;
-    /*flex-basis: 10%;*/
+.slider-area .current-time {
+    text-align: right;
+}
+
+.slider-area .duration-time {
+    text-align: left;
 }
 
 
-    .slider-area .slider-container .slider {
+.slider-area .slider-container .slider {
+    appearance: none;
+    background-image: url("data:image/svg+xml,<svg xmlns='http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' width='100%' height='8'><defs><linearGradient id='blue-grad'><stop stop-color='%231e9ed7' offset='0%'/><stop stop-color='white' offset='100%'/></linearGradient></defs><rect x='0' y='0' width='0%' height='8' rx='4' fill='url(%23blue-grad)'/></svg>"), url("data:image/svg+xml,<svg xmlns='http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' width='100%' height='8'><rect x='0' y='0' width='100%' height='8' rx='4' fill='%234d4c4d'/></svg>");
+    border-radius: 4px;
+    height: 8px;
+    outline: none;
+    width: 100%;
+}
+
+    .slider-area .slider-container .slider::-webkit-slider-thumb {
         appearance: none;
-        background-image: url("data:image/svg+xml,<svg xmlns='http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' width='100%' height='10'><defs><linearGradient id='blue-grad'><stop stop-color='%231e9ed7' offset='0%'/><stop stop-color='white' offset='100%'/></linearGradient></defs><rect x='0' y='0' width='50%' height='10' rx='5' fill='url(%23blue-grad)'/></svg>"), url("data:image/svg+xml,<svg xmlns='http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' width='100%' height='10'><rect x='0' y='0' width='100%' height='10' rx='5' fill='lightgray'/></svg>");
-        border-radius: 8px;
         height: 10px;
-        outline: none;
-        width: 100%;
+        width: 0px;
+        border-radius: 5px;
+        background: transparent;
     }
 
-        .slider-area .slider-container .slider::-webkit-slider-thumb {
-            appearance: none;
-            height: 10px;
-            width: 0px;
-            border-radius: 5px;
-            background: transparent;
-        }
-
-        .slider-area .slider-container .slider::-moz-range-thumb {
-            appearance: none;
-            height: 10px;
-            width: 0px;
-            border-radius: 5px;
-            background: transparent;
-            border: none;
-        }
+    .slider-area .slider-container .slider::-moz-range-thumb {
+        appearance: none;
+        height: 10px;
+        width: 0px;
+        border-radius: 5px;
+        background: transparent;
+        border: none;
+    }
