audio source change to track.source

--- a/MusicPlayer/Spotify/Shared/Trackbar.razor
+++ b/MusicPlayer/Spotify/Shared/Trackbar.razor
@@ -28,7 +28,7 @@
     </div>
     @*@Track.Source*@
     <div class="controls-area">
-        <audio @ref=Audio src="Find me.mp3" loop></audio>
+        <audio @ref=Audio src="@Track.Source" loop></audio>
         <div class="buttons-area">
             <div class="buttons-left-area">
                 <button class="shuffle-button button">
@@ -67,6 +67,8 @@
     </div>
 
     <div class="other-area">
+
+
     </div>
 </div>
 
