--- a/MusicPlayer/Spotify/Shared/MainLayout.razor.css
+++ b/MusicPlayer/Spotify/Shared/MainLayout.razor.css
@@ -35,7 +35,7 @@
 }
 
 .favorites-area, .main-area {
-    transition: --var1 0.5s;
+    transition: var(--var1) 0.5s;
     transition-delay: 1s;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -50,6 +50,7 @@
     display: flex;
     flex-flow: column;
     overflow: hidden;
+    max-width:70%;
 }
 
     .sidebar-area .menu-area {
